@@ -1,0 +1,48 @@
+<?php
+
+/*
+ * LMS version 1.11-git
+ *
+ *  (C) Copyright 2001-2013 LMS Developers
+ *
+ *  Please, see the doc/AUTHORS for more information about authors!
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License Version 2 as
+ *  published by the Free Software Foundation.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
+ *  USA.
+ *
+ *  $Id$
+ */
+
+function GetNodesForCustomer($cid) {
+	global $LMS;
+
+	$result = new XajaxResponse();
+
+	$nodes = null;
+	if ($cid)
+		$nodes = $LMS->GetCustomerNodes($cid);
+
+	if (empty($nodes))
+		$nodes = array();
+
+	$result->call('nodes_received', $nodes);
+
+	return $result;
+}
+
+$LMS->InitXajax();
+$LMS->RegisterXajaxFunction('GetNodesForCustomer');
+$SMARTY->assign('xajax', $LMS->RunXajax());
+
+?>
