@@ -10,6 +10,8 @@ version ?.??.?? (????-??-??):
   - move upgrade db schema code to LMSDB class - it can also be used by plugins [chilan]
   - added simple plugin management form [chilan]
   - added support for old style plugin management [chilan]
+  - added binding between customer nodes and voip accounts as it will be needed for
+    plicbd reports [chilan]
 
 version 1.11.17 (2015-06-29):
 
